--- a/08_RecursiveQueries.tex
+++ b/08_RecursiveQueries.tex
@@ -33,7 +33,7 @@ UNION
                         \end{itemize}
                     \item \verb+<base query>+ is run only once at the beginning and populates \verb+some_table+
                     \item \verb+<recursive query>+ queries \verb+some_table+ and updates it
-                    \item \verb+<Final Query>+ run one after \verb+some_table+ converges
+                    \item \verb+<Final Query>+ run once after \verb+some_table+ converges
                 \end{itemize}
         \end{itemize}
     \item Recursion can be infinite
