--- a/12_NormalForm.tex
+++ b/12_NormalForm.tex
@@ -16,10 +16,19 @@
         \end{itemize}
     \ides{Second Normal Form (2NF)}
         \begin{itemize}
-            \item $\{R, \text{FD}\}$ is in 2NF iff every non-key attribute is minimally dependent on every key
+            \item $R$ is in 2NF iff every non-key attribute is minimally dependent on every key
                 \begin{itemize}
                     \ides{Minimally Dependant:} No attribute depends on part of a key
                     \item I.e. none of the non-key attribute depends on part of a key
+                \end{itemize}
+            \item I.e. If $R(a, b, c, d)$ with primary key $\{a, b\}$ then $a \to c$ is not allowed
+            \item Alternative, less strong definition
+            \item $R$ is in 2NF if for all $\alpha \to B$ at least one holds:
+                \begin{itemize}
+                    \item $B \in \alpha$
+                    \item $B$ contains at least one key
+                    \item $\alpha$ is a superkey of $R$
+                    \item No attribute in $\alpha$ is part of any key
                 \end{itemize}
             \ipro Improve insert, update and delete anomaly
             \icon Does not solve update and delete anomaly
@@ -30,7 +39,7 @@
         \end{itemize}
     \ides{Third Normal Form (3NF)}
         \begin{itemize}
-            \item $R$ is in 3NF iff for all $\alpha \to B$ if at least one holds:
+            \item $R$ is in 3NF iff for all $\alpha \to B$ at least one holds:
                 \begin{itemize}
                     \item $B \in \alpha$
                     \item $B$ contains at least one key
@@ -43,13 +52,13 @@
             \icon Does not get rid of all redundant data
             \ipro Is lossless
             \ipro Preserves all dependencies
-            \ides{Recipe:} Decompose $\mc{R}$ into $\mc{R}_1, \dots, \mc{R}_n$ according to 3NF
+            \ides{Recipe Synthesis Algorithm:} Decompose $\mc{R}$ into $\mc{R}_1, \dots, \mc{R}_n$ according to 3NF
                 \begin{itemize}
                     \item[1)] Compute minimal basis $F_c$ of $F$
                     \item[2)] For all $\alpha \to \beta \in F_c$, create $R_{\alpha \cup \beta}(\alpha \cup \beta)$
                     \item[3)] If none of the relations contains a superkey, add a relation with a key
                     \item[4)] Eliminate $R_\alpha$ if there exists $R_{\alpha'}$ such that $\alpha \subseteq \alpha'$
-                \end{itemize} \todo{Improve recipe}
+                \end{itemize}
         \end{itemize}
     \ides{Boyce-Cod Normal Form (BCNF)}
         \begin{itemize}
@@ -64,17 +73,17 @@
                 \begin{itemize}
                     \item Only of all redundancies caused by FD
                 \end{itemize}
-            \ides{Recipe:} Decompose $\mc{R}$ into $\mc{R}_1, \dots, \mc{R}_n$ according to BCNF
+            \ides{Recipe Decomposition Algorithm:} Decompose $\mc{R}$ into $\mc{R}_1, \dots, \mc{R}_n$ according to BCNF
                 \begin{itemize}
                     \item[1)] Set result to $\{\mc{R}\}$
-                    \item[2)] If there is $\mc{R}_i = \alpha \to \beta$ which is not in BCNF
+                    \item[2)] If there is $\mc{R}_i$ with $\alpha \to \beta$ which is not in BCNF
                         \begin{itemize}
                             \item $\mc{R}^1_i = \alpha \cup \beta$
                             \item $\mc{R}^2_i = \mc{R}_i \setminus \beta$
                             \item $\text{Result} = (\text{Result} \setminus R_i) \cup \{\mc{R}^1_i, \mc{R}^2_i\}$
                         \end{itemize}
                     \item[3)] Repeat $2$ as long as there are $\mc{R}_i$ which are not in BCNF
-                \end{itemize} \todo{Improve recipe}
+                \end{itemize}
         \end{itemize}
     \ides{Non-First Normal Form (NFNF)}
         \begin{itemize}
@@ -92,9 +101,9 @@
                     \ides{Notation:} $A \to \to B, A \to \to C$
                     \item $\alpha \to \to \beta$ for $R(\alpha, \beta, \gamma)$ iff
                         \begin{itemize}
-                            \item $\forall t_1, t_2 \in R, t_1.\alpha = t2.\alpha \implies \exists t_2,t_4 \in R$:
+                            \item $\forall t_1, t_2 \in R, t_1.\alpha = t_2.\alpha \implies \exists t_3,t_4 \in R$:
                                 \begin{itemize}
-                                    \item $t_3.\alpha = t_4.\alpha = t_1.\alpha t_2.\alpha$
+                                    \item $t_3.\alpha = t_4.\alpha = t_1.\alpha = t_2.\alpha$
                                     \item $t_3.\beta = t_1.\beta; t_4.\beta = t_2.\beta$
                                     \item $t_3.\gamma = t_2.\gamma; t_4.\gamma = t_1.\gamma$
 
@@ -124,7 +133,7 @@
                         \end{itemize}
                     \ides{Promotion:} $\alpha \to \beta \implies \alpha \to \to \beta$
                     \ides{Complement:} $\alpha \to \to \beta \implies \alpha \to \to (\mc{R} \setminus \alpha \setminus \beta)$
-                    \ides{Multi-Value Augmentation:} $\alpha \to \to \beta \wedge (\delta \subset \gamma) \implies \alpha \gamma \to \to \beta \delta$
+                    \ides{Multi-Value Augmentation:} $\alpha \to \to \beta \wedge (\delta \subseteq \gamma) \implies \alpha \gamma \to \to \beta \delta$
                     \ides{Multi-Value Transitivity:} $(\alpha \to \to \beta) \wedge (\beta \to \to \gamma) \implies \alpha \to \to \gamma$
                     \item Not all FD rules apply to MVD
                         \begin{itemize}
@@ -132,23 +141,23 @@
                         \end{itemize}
                 \end{itemize}
             \item Deals with MVD (and not FD)
-            \item $R$ is 4NF iss for all $\alpha \to \to \beta$, at least one condition holds:
+            \item $R$ is 4NF iff for all $\alpha \to \to \beta$, at least one condition holds:
                 \begin{itemize}
                     \item $\alpha \to \to \beta$ is trivial
                     \item $\alpha$ is a superkey of $R$
                 \end{itemize}
             \item $R$ in 4NF $\implies R$ in BCNF
-            \ides{Recipe:} Decompose $\mc{R}$ into $\mc{R}_1, \dots, \mc{R}_n$ according to 4NF
+            \ides{Recipe Decomposition Algorithm:} Decompose $\mc{R}$ into $\mc{R}_1, \dots, \mc{R}_n$ according to 4NF
                 \begin{itemize}
                     \item[1)] Set result to $\{\mc{R}\}$
-                    \item[2)] If there is $\mc{R}_i = \alpha \to \beta$ which is not in BCNF
+                    \item[2)] If there is $\mc{R}_i$ with $\alpha \to\to \beta$ which is not in 4NF
                         \begin{itemize}
                             \item $\mc{R}^1_i = \alpha \cup \beta$
                             \item $\mc{R}^2_i = \mc{R}_i \setminus \beta$
                             \item $\text{Result} = (\text{Result} \setminus R_i) \cup \{\mc{R}^1_i, \mc{R}^2_i\}$
                         \end{itemize}
-                    \item[3)] Repeat $2$ as long as there are $\mc{R}_i$ which are not in BCNF
-                \end{itemize} \todo{Improve recipe} \todo{Why same as for 3NF?}
+                    \item[3)] Repeat $2$ as long as there are $\mc{R}_i$ which are not in 4NF
+                \end{itemize}
         \end{itemize}
     \item $\overbrace{\underbrace{\overbrace{\text{1NF} \subset \text{2NF} \subset \text{3NF}}^{\text{preserve dependencies}} \subset \text{BCNF}}_{\text{deal with FD}} \subset \underbrace{\text{4NF}}_{\text{deal with MVD}}}^{\text{lossless}}$
     \item There are many different NF with different properties
